header/in progress

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,13 @@
 @import "utils";
 @import "fonts";
 @import "typography";
+@import "header";
 
-body {
-  background: $c-gray;
+@import "_section1";
+@import "media";
+
+body,
+h1,
+p {
+  margin: 0;
 }
