--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,17 @@
-$c-gray: #eee;
+$color1: #f1f5f4;
+$color2: #3f5252;
+$color3: #cd4d31;
+$tablet-width: 1024px;
+$laptop-width: 1600px;
+$header__padding: 20px;
+$logo-height: 20px;
+$burgMenuHeight: $logo-height;
+$burgLineHeight: 2px;
+$burgLineWidth: 25px;
+
+$section1__padding-top: 100px;
+$titleFontSize-mobile: 48px;
+$titleFontSize-tablet: 72px;
+$titleFontSize-laptop: 96px;
+$btn-BuyTicketWidth: 270px;
+$btn-BuyTicketHeight: 60px;
