--- a/src/styles/circle.scss
+++ b/src/styles/circle.scss
@@ -16,7 +16,7 @@
   }
 
   &__circle--active {
-    background-color: #1a5a4c;
+    background-color: $mainGreenColor;
   }
 
   @media (min-width: 1300px) {
