--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -16,6 +16,10 @@
     margin-bottom: 40px;
   }
 
+  &__logo {
+    margin: 0;
+  }
+
   &__info {
     display: flex;
     justify-content: space-between;
@@ -24,6 +28,20 @@
 
   &__icon-first {
     margin-right: 26.51px;
+    height: 24px;
+  }
+
+  &__icon-second {
+    width: 24px;
+  }
+
+  &__icon-first,
+  &__icon-second {
+    transition: transform 0.5s;
+
+    &:hover {
+      transform: scale(1.2);
+    }
   }
 
   &__links {
@@ -95,14 +113,14 @@
     }
 
     &__main-content {
-      width: 60%;
+      width: 70%;
+      margin: 0 auto 100px;
       align-self: center;
     }
 
     &__icons {
       align-self: flex-start;
       flex-direction: column;
-      margin-right: 100px;
     }
 
     &__logo {
@@ -127,11 +145,11 @@
       display: flex;
       justify-content: space-between;
       width: 100%;
-      margin: 0 100px;
+      margin: 0 50px;
 
       &::after {
         position: absolute;
-        left: 50%;
+        left: 45%;
         width: 1px;
         height: 100%;
         content: "";
@@ -144,6 +162,10 @@
       margin: 0;
     }
 
+    &__nav {
+      margin-right: 150px;
+    }
+
     &__line {
       display: none;
     }
@@ -151,7 +173,11 @@
 
   @media (min-width: 1480px) {
 
-    padding: 0 175px;
+    padding: 0 $largeScreensGap;
+
+    &__main-content {
+      margin: 0 70px;
+    }
 
     &__container,
     &__design {
