--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -1,8 +1,9 @@
 @import "variables";
 @import "_reset";
 @import "header";
+@import "nav-top";
+@import "promo";
 @import "logo";
-@import "menu";
 @import "main";
 @import "event";
 @import "info";
