--- a/src/styles/info.scss
+++ b/src/styles/info.scss
@@ -16,7 +16,7 @@
   &__dates {
     font-weight: 700;
     font-size: 1rem;
-    color: #1a5a4c;
+    color: $mainGreenColor;
   }
 
   &__title {
@@ -42,7 +42,7 @@
     @include coloredSquare(40px, 10px);
   }
 
-  @media (min-width: 766px) {
+  @media (min-width: 768px) {
     &__container {
       justify-content: flex-start;
       margin-bottom: 30px;
