--- a/src/styles/nav.scss
+++ b/src/styles/nav.scss
@@ -14,13 +14,13 @@
   &__link {
     position: relative;
     font-size: 14px;
-    color: #0f0e08;
+    color: $mainBlackColor;
 
     &:link,
     &:visited,
     &:hover,
     &:active {
-      color: #0f0e08;
+      color: $mainBlackColor;
       text-decoration: none;
     }
   }
