--- a/src/styles/square.scss
+++ b/src/styles/square.scss
@@ -2,29 +2,27 @@
   cursor: pointer;
 
   &--green {
-    background: #1a5a4c url("../images/arrow-top.png") center no-repeat;
+    background: $mainGreenColor url("../images/arrow-top.png") center no-repeat;
   }
 
   &--orange {
-    background: #f14a27 url("../images/arrow-top.png") center no-repeat;
+    background: $mainOrangeColor url("../images/arrow-top.png") center no-repeat;
   }
 
   @media (min-width: 320px) {
-    $squareWidth: 50px;
-
-    width: $squareWidth;
-    height: $squareWidth;
+    width: 50px;
+    height: 100%;
   }
 
   @media (min-width: 768px) {
-    $squareWidth: 70px;
-
-    width: $squareWidth;
-    height: $squareWidth;
+    width: 70px;
+    height: 100%;
   }
 
   @media (min-width: 1300px) {
-    display: block;
-    align-self: flex-start;
+    &--hidden {
+      width: 70px;
+      height: 70px;
+    }
   }
 }
