--- a/src/styles/logo.scss
+++ b/src/styles/logo.scss
@@ -1,6 +1,22 @@
 .logo {
-  width: 55px;
-  height: 61px;
+  width: $pageLogoWidth;
+  height: $pageLogoHeight;
+  margin-top: 9px;
+  z-index: 3;
   background: url("../images/logo.png") center no-repeat;
   background-size: contain;
+  transition: transform 0.5s;
+
+  &:hover {
+    transform: rotateZ(360deg);
+  }
+
+  @media (min-width: 768px) {
+    width: 58px;
+    height: 72px;
+  }
+
+  @media (min-width: 1300px) {
+    margin-top: 0;
+  }
 }
