--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,3 +1,16 @@
+$pageLogoWidth: 55px;
+$pageLogoHeight: 61px;
+$mainBlackColor: #0f0e08;
+$mainGreenColor: #1a5a4c;
+$mainOrangeColor: #f14a27;
+$hoverButtonColor: #f16545;
+
+$largeScreensGap: 175px;
+$wideScreensGap: 135px;
+$mediumScreensGap: 55px;
+$smallScreensGap: 20px;
+$mainBottomGap: 70px;
+
 @mixin pageActionsProps($width, $height) {
   width: $width;
   height: $height;
@@ -20,5 +33,21 @@
 @keyframes pulse {
   0% {
     box-shadow: 0 0 0 0 darkgray;
+  }
+}
+
+@keyframes linksUnderline {
+  0% {
+    transform: scale(0.2);
+  }
+
+  100% {
+    transform: scale(1);
+  }
+}
+
+@keyframes hiddenBlock {
+  0% {
+    transform: translateX(-100%);
   }
 }
