--- a/src/styles/nav.scss
+++ b/src/styles/nav.scss
@@ -15,12 +15,17 @@
     position: relative;
     font-size: 14px;
     color: $mainBlackColor;
+    transition: color 0.5s;
 
     &:link,
     &:visited,
-    &:hover,
     &:active {
       color: $mainBlackColor;
+      text-decoration: none;
+    }
+
+    &:hover {
+      color: $mainGreenColor;
       text-decoration: none;
     }
   }
