--- a/src/styles/promo.scss
+++ b/src/styles/promo.scss
@@ -77,8 +77,14 @@
     font-weight: 700;
     font-size: 14px;
     text-transform: uppercase;
+    text-decoration: none;
     color: #687480;
     transform: rotate(-90deg);
+
+    &:hover {
+      color: #687480;
+      text-decoration: none;
+    }
   }
 
   &__decor-line {
