--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -14,8 +14,24 @@
     box-shadow: 0 6px 8px rgba(0, 0, 0, 0.06);
   }
 
+  &__search-input {
+    position: absolute;
+    width: 180px;
+    right: 80px;
+    padding: 2px 10px;
+    border: 1px solid grey;
+    border-radius: 4px;
+    opacity: 0.7;
+
+    &:focus {
+      outline: none;
+    }
+  }
+
   &__search {
     $searchWidth: 17.5px;
+    position: absolute;
+    right: $mediumScreensGap;
 
     width: $searchWidth;
     height: $searchWidth;
@@ -30,17 +46,21 @@
   }
 
   &__hidden-menu {
-    display: none;
     position: absolute;
     width: 100%;
+    left: -100%;
+    height: 100vh;
     z-index: 2;
     background-color: $mainGreenColor;
+    transition: all 0.5s;
   }
 
   &__checkbox-label {
     position: absolute;
-    top: 33px;
+    top: 28px;
     left: 23px;
+    width: 18px;
+    height: 15px;
     content: url("../images/menu.png");
     cursor: pointer;
   }
@@ -52,14 +72,13 @@
     &:checked + &-label {
       position: absolute;
       z-index: 3;
-      width: 20px;
-      height: 20px;
+      width: 18px;
+      height: 18px;
       content: url("../images/close.png");
     }
 
     &:checked ~ #{$blockName}__hidden-menu {
-      display: block;
-      animation: hiddenBlock 0.5s;
+      left: 0;
     }
   }
 
@@ -94,6 +113,16 @@
   @media (min-width: 1500px) {
     &__container {
       padding: 0 $largeScreensGap;
+    }
+  }
+
+  @media (min-width: 1680px) {
+    &__search {
+      right: $largeScreensGap;
+    }
+
+    &__search-input {
+      right: 200px;
     }
   }
 }
