Museum landing page

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,15 @@
 @import "utils";
 @import "fonts";
 @import "typography";
-
-body {
-  background: $c-gray;
-}
+@import "reset";
+@import "global";
+@import "header";
+@import "menu";
+@import "nav";
+@import "logo";
+@import "buttons";
+@import "events";
+@import "lection";
+@import "gallery";
+@import "subscription";
+@import "footer";
