--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -1,3 +1,11 @@
 h1 {
   @extend %h1;
 }
+
+html {
+  font-family: IBM Plex Sans, sans-serif;
+  font-style: normal;
+  font-weight: 300;
+  font-size: 16px;
+  line-height: 150%;
+}
