Small UX changes

--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -32,6 +32,12 @@ body {
   @media (max-width: $portableScreenSize) {
     margin-top: 70px;
   }
+
+  &:first-child {
+    @media (max-width: $portableScreenSize) {
+      margin-top: 0;
+    }
+  }
 }
 
 .subsection-container {
