Small UX changes v2

--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -90,6 +90,19 @@
     text-align: center;
   }
 
+  &__hamburger-input:checked ~ &__top {
+    display: flex;
+    justify-content: center;
+  }
+
+  &__hamburger-input:checked ~ &__top &__logo {
+    @media (max-width: $tabletScreenSize) {
+      position: fixed;
+      top: $headerTopSectionTop;
+      z-index: 2;
+    }
+  }
+
   &__content {
     margin-left: $headerContentMarginLeft;
     transition: margin-left $mockupSizingAnim;
