Header almost done

--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -4,3 +4,9 @@
     #{$_property}: $_toValue;
   }
 }
+
+@mixin promoTranslate($duration) {
+  animation-name: promo-translate;
+  animation-duration: $duration;
+  animation-timing-function: ease;
+}
