--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,14 @@
-$c-gray: #eee;
+$headerColor: #3f5252;
+$brightColor: #f1f5f4;
+$accentColor: #cd4d31;
+$darkColor: #1c1b29;
+
+$wideScreenPadding: calc(50% - 550px);
+$noteScreenPadding: 6%;
+$tabletScreenPadding: 15%;
+$iPadScreenPadding: 20px;
+
+$noteScreenWidth: 1279px;
+$tabletScreenWidth: 1023px;
+$iPadScreenWidth: 767px;
+$mobileScreenWidth: 479px;
