--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,7 @@
-@import "utils";
-@import "fonts";
-@import "typography";
-
-body {
-  background: $c-gray;
-}
+@import "abstracts/vars";
+@import "abstracts/mixins";
+@import "abstracts/extends";
+@import "base/reset";
+@import "base/base";
+@import "base/typography";
+@import "layout/header";
