--- a/src/styles/abstracts/_mixins.scss
+++ b/src/styles/abstracts/_mixins.scss
@@ -1,4 +1,15 @@
 @mixin shifted-block {
   position: relative;
   right: -99px;
+  animation: shift 2s 1s ease backwards;
+}
+
+@keyframes shift {
+  from {
+    right: 0;
+  }
+
+  to {
+    right: -99px;
+  }
 }
