--- a/src/styles/layout/header.scss
+++ b/src/styles/layout/header.scss
@@ -25,6 +25,15 @@
     padding-top: 20px;
   }
 
+  &__logo {
+    transition: transform 1s ease;
+
+    &:hover {
+      transition: transform 1.5s ease;
+      transform: scale(1.2);
+    }
+  }
+
   &__lang {
     position: relative;
 
@@ -233,6 +242,14 @@
 
     @media (max-width: $mediumSize) {
       grid-row-gap: 50px;
+    }
+  }
+
+  &__nav-item {
+    transition: transform 1s ease;
+
+    &:hover {
+      transform: translateX(20px);
     }
   }
 
