Changes after student review

--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -40,6 +40,10 @@ $topOverflow: $iPadScreenPadding / 2;
   &__burger-menu {
     padding: 20px 10px;
     margin-right: 10px;
+
+    @media (max-width: $iPadScreenWidth) {
+      margin-right: 0;
+    }
   }
 
   &__lang {
@@ -55,6 +59,10 @@ $topOverflow: $iPadScreenPadding / 2;
       content: ">";
       display: inline-block;
       transform: translatex(5px) rotate(90deg);
+    }
+
+    @media (max-width: $iPadScreenWidth) {
+      display: none;
     }
   }
 }
