--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,43 +1,7 @@
 @import "utils";
 @import "fonts";
 @import "typography";
-@import "interface";
+@import "global";
 @import "blocks/header";
 @import "blocks/promo";
 @import "blocks/burger-menu";
-
-* {
-  box-sizing: border-box;
-}
-
-html {
-  font-family: "Raleway", sans-serif;
-  font-weight: 400;
-  font-size: 16px;
-  color: $darkColor;
-  overflow-x: hidden;
-}
-
-body {
-  overflow-x: hidden;
-}
-
-.container {
-  padding: 0 $wideScreenPadding;
-
-  @media (max-width: $noteScreenWidth) {
-    padding: 0 $noteScreenPadding;
-  }
-
-  @media (max-width: $tabletScreenWidth) {
-    padding: 0 $tabletScreenPadding;
-  }
-
-  @media (max-width: $iPadScreenWidth) {
-    padding: 0 $iPadScreenPadding;
-  }
-
-  &__header {
-    padding-top: 20px;
-  }
-}
