--- a/src/styles/utils/_extends.scss
+++ b/src/styles/utils/_extends.scss
@@ -1,4 +1,10 @@
-%h1 {
-  font-family: "Roboto", sans-serif;
-  font-weight: 400;
+%button {
+  padding: 22px 81px;
+  background-color: $accentColor;
+  color: $brightColor;
+  border: none;
+  font-family: "Raleway", sans-serif;
+  font-size: 16px;
+  line-height: 100%;
+  cursor: pointer;
 }
