Added working burger-menu

--- a/src/styles/blocks/promo.scss
+++ b/src/styles/blocks/promo.scss
@@ -10,13 +10,17 @@ $imgHeight: 753px;
 .promo {
   padding-top: 110px;
 
+  &--hidden {
+    display: none;
+  }
+
   @media (max-width: $iPadScreenWidth) {
     padding-top: 100px;
   }
 
   &__date {
     margin-bottom: 10px;
-    @include promoTranslate(0.5s);
+    @include translateFromLeft(0.5s);
 
     @media (max-width: $iPadScreenWidth) {
       margin-bottom: 20px;
@@ -25,7 +29,7 @@ $imgHeight: 753px;
 
   &__title {
     margin-bottom: 40px;
-    @include promoTranslate(1s);
+    @include translateFromLeft(1s);
 
     &--translate {
       margin-left: $promoTextTranslate;
@@ -54,7 +58,7 @@ $imgHeight: 753px;
     max-width: 370px;
     margin-bottom: 60px;
     margin-left: $promoTextTranslate;
-    @include promoTranslate(1.5s);
+    @include translateFromLeft(1.5s);
 
     @media (max-width: $tabletScreenWidth) {
       max-width: 267px;
@@ -72,7 +76,7 @@ $imgHeight: 753px;
     @extend %button;
     margin-left: $promoTextTranslate;
     margin-bottom: 120px;
-    @include promoTranslate(1.5s);
+    @include translateFromLeft(1.5s);
 
     @media (max-width: $tabletScreenWidth) {
       margin-left: $promoTextTranslate / 2;
