--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -5,3 +5,5 @@
 @import "blocks/header";
 @import "blocks/promo";
 @import "blocks/burger-menu";
+@import "blocks/hidden-nav";
+@import "blocks/nav";
