--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -5,7 +5,7 @@
   }
 }
 
-@mixin promoTranslate($duration) {
+@mixin translateFromLeft($duration) {
   animation-name: promo-translate;
   animation-duration: $duration;
   animation-timing-function: ease;
