--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,12 @@
 @import "utils";
 @import "fonts";
 @import "typography";
+@import "reset";
+@import "header";
+@import "container";
+@import "current-events";
 
 body {
-  background: $c-gray;
+  background-color: #fff;
+  font-family: Montserrat, sans-serif;
 }
