--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,12 @@
 @import "utils";
 @import "fonts";
+@import "mixins";
 @import "typography";
-
-body {
-  background: $c-gray;
-}
+@import "reset";
+@import "header";
+@import "section";
+@import "exhibitions";
+@import "lectures";
+@import "gallery";
+@import "subscription";
+@import "futer";
