--- a/src/styles/_exhibitions.scss
+++ b/src/styles/_exhibitions.scss
@@ -1,5 +1,5 @@
 .exhibitions {
-  &__heading{
+  &__heading {
     @include sectionsHeading;
   }
 
@@ -23,7 +23,6 @@
         margin-left: 130px;
       }
     }
-
 
     &-img {
       object-fit: contain;
@@ -60,21 +59,21 @@
       font-weight: bold;
       font-size: 14px;
       line-height: 150%;
-      color: #1A5A4C;
+      color: #1a5a4c;
     }
 
     &-heading {
       position: relative;
       font-size: 36px;
       line-height: 1;
-      color: #0F0E08;
+      color: #0f0e08;
       margin: 30px 0 15px;
 
       &::after {
         content: "";
         width: 15px;
         height: 15px;
-        background-color: #F14A27;
+        background-color: #f14a27;
         position: absolute;
         top: 12px;
         margin-left: 12px;
@@ -85,7 +84,7 @@
       font-weight: 300;
       font-size: 16px;
       line-height: 150%;
-      color: #4E4E4E;
+      color: #4e4e4e;
     }
   }
 }
