--- a/src/styles/_futer.scss
+++ b/src/styles/_futer.scss
@@ -9,7 +9,7 @@
     font-weight: 300;
     font-size: 12px;
     line-height: 140.62%;
-    color: #0F0E08;
+    color: #0f0e08;
     padding-top: 84px;
   }
 
@@ -30,12 +30,12 @@
     margin: 0 0 62px;
   }
 
-  &__social-icons {
+  &__-icons {
     display: flex;
     justify-content: space-between;
   }
 
-  &__sicial-icon {
+  &__-icon {
     height: 24px;
     width: 24px;
   }
