--- a/src/styles/_gallery.scss
+++ b/src/styles/_gallery.scss
@@ -5,13 +5,11 @@
 
   &__photos {
     display: grid;
-    grid-template-areas:
-      "photo1 photo2 photo2"
-      "photo3 photo3 photo4";
+    grid-template-columns: repeat(2, 1fr);
     gap: 30px;
   }
 
-  &__img{
+  &__img {
     transition: transform 1s;
 
     &:hover {
@@ -21,7 +19,7 @@
 
   &__button-more {
     margin-top: 30px;
-    background-color: #1A5A4C;
+    background-color: #1a5a4c;
     background-image: url("../images/button.svg");
     @include buttonMore;
   }
