--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -2,7 +2,7 @@
   font-weight: bold;
   font-size: 48px;
   line-height: 100%;
-  color: #0F0E08;
+  color: #0f0e08;
   margin-bottom: 60px;
 }
 
@@ -27,6 +27,6 @@
   font-weight: normal;
   font-size: 14px;
   line-height: 150%;
-  color: #0F0E08;
+  color: #0f0e08;
   margin-bottom: 20px;
 }
