--- a/src/styles/_subscription.scss
+++ b/src/styles/_subscription.scss
@@ -12,7 +12,7 @@
   &__text {
     font-size: 18px;
     line-height: 1;
-    color: #FFFFFF;
+    color: #fff;
     text-align: center;
     margin-bottom: 66px;
   }
@@ -29,7 +29,7 @@
     margin-right: 30px;
 
     &::placeholder {
-      font-family: Montserrat;
+      font-family: "Montserrat", sans-serif;
       font-size: 14px;
       line-height: 1;
       color: #687480;
@@ -37,7 +37,7 @@
   }
 
   &__button {
-    background: #F14A27;
+    background: #f14a27;
     background-image: url("../images/button-black.svg");
     @include buttonMore;
   }
