--- a/src/styles/reset.scss
+++ b/src/styles/reset.scss
@@ -30,9 +30,9 @@ body {
 }
 
 .heading {
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
 }
 
 .text {
-  font-family: 'IBM Plex Sans', sans-serif;
+  font-family: "IBM Plex Sans", sans-serif;
 }
