--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -40,7 +40,7 @@
     line-height: 1;
 
     &--trans {
-      -webkit-text-stroke: 1px #0F0E08;
+      -webkit-text-stroke: 1px #0f0e08;
       color: transparent;
     }
   }
@@ -61,7 +61,7 @@
       content: "";
       width: 70px;
       height: 1px;
-      background-color: #1A5A4C;
+      background-color: #1a5a4c;
       position: absolute;
       right: calc(100% + 20px);
       top: 7px;
@@ -76,23 +76,22 @@
     font-size: 16px;
     line-height: 16px;
     text-transform: uppercase;
-    color: #0F0E08;
+    color: #0f0e08;
     padding: 26px 42px;
-    border: 1px solid #1A5A4C;
+    border: 1px solid #1a5a4c;
 
     &::after {
       position: absolute;
       top: -1px;
       left: calc(100% + 1px);
       content: "";
-      background-color: #1A5A4C;
+      background-color: #1a5a4c;
       background-image: url("../images/button.svg");
       @include buttonMore;
     }
   }
-}
 
-.header__button:hover {
-  background-color: #1A5A4C;
-  color: white;
+  &__toggle {
+    display: none;
+  }
 }
