--- a/src/styles/_lectures.scss
+++ b/src/styles/_lectures.scss
@@ -15,7 +15,7 @@
     background-color: #fff;
     position: relative;
     bottom: 102px;
-    box-shadow: 0px 2px 0px rgba(26, 90, 76, 0.25);
+    box-shadow: 0 2px 0 rgba(26, 90, 76, 0.25);
     margin-bottom: -102px;
   }
 
@@ -35,13 +35,13 @@
     font-weight: bold;
     font-size: 14px;
     line-height: 150%;
-    color: #1A5A4C;
+    color: #1a5a4c;
   }
 
   &__heading {
     font-size: 36px;
     line-height: 100%;
-    color: #0F0E08;
+    color: #0f0e08;
     margin-top: 16px;
   }
 }
