--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,6 +2,467 @@
 @import "fonts";
 @import "typography";
 
-body {
-  background: $c-gray;
+$navMaxWidth: 800px;
+$maxContentWidth: 1200px;
+$headerMaxWidth: 1738px;
+
+* {
+  box-sizing: border-box;
 }
+
+a {
+  text-decoration: none;
+}
+
+body,
+html,
+main,
+ul,
+li,
+h1,
+h2,
+p,
+h3,
+button {
+  margin: 0;
+  padding: 0;
+  font-weight: normal;
+  font-style: normal;
+  position: relative;
+}
+
+.menu {
+  position: relative;
+  display: none;
+  justify-content: center;
+  width: 100%;
+  height: 100vh;
+  background-color: #fff;
+  z-index: 4;
+  
+  &__content {
+    height: 500px;
+    min-width: 768px;
+    max-width: $maxContentWidth;
+    width: 80%;
+
+  }
+  &__logo {
+    width: 63px;
+    height: 72px;
+    margin: 0 calc(37px - 23px) 14px 0;
+  }
+  &__logo-nav {
+    display: flex;
+    align-items: flex-end;
+    width: 80%;
+  }
+
+  &__search-icon {
+    margin-bottom: 14px;
+  }
+
+  &__content-top {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    align-items: flex-end;
+    margin: 9px 0 58px;
+    padding-left: 28px;
+  }
+  &__buttons {
+    padding-left: 28px;
+    margin-bottom: 146px;
+  }
+  &__button {
+    font-family: Oswald, sans-serif;
+    width: 300px;
+    height: 70px;
+    display: inline-block;
+    text-transform: uppercase;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 100%;
+    cursor: pointer;
+
+    &_hours-n-tickets {
+      background: #d7dde3;
+      border: 1px solid #fff;
+      color: #847b74;
+      margin-right: 100px;
+    }
+
+    &_visit {
+      background: #1a5a4c;
+      color: #d7dde3;
+      border: none;
+    }
+  }
+
+  &__buy-tickets {
+    width: 258px;
+    height: 70px;
+    border: 1px solid #847b74;
+    font-family: Oswald, sans-serif;
+    font-weight: 200;
+    font-size: 24px;
+    margin: 0 0 214px;
+    cursor: pointer;
+    color: #0f0e08;
+  }
+
+  &__buy-arrow {
+    width: 70px;
+    height: 70px;
+    background: #847b74;
+    font-family: Oswald, sans-serif;
+    font-weight: 200;
+    font-size: 24px;
+    margin: 0;
+    border: none;
+    cursor: pointer;
+    color: #d7dde3;
+  }
+  &__full-bottom {
+    margin-bottom: 113px;
+    padding-left: 28px;
+  }
+
+  &__terms {
+    display: inline-block;
+    font-family: Oswald, sans-serif;
+    font-weight: 300;
+    font-size: 12px;
+    line-height: 17px;
+    color: #0f0e08;
+  }
+  &__text-first {
+    margin-right: 38px;
+  }
+}
+
+.bottom {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+
+  &__first-block {
+    display: flex;
+    justify-content: space-between;
+    width: 49.9%;
+    padding-left: 28px;
+  }
+
+  &__insta {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 159px;
+  }
+
+  &__logo {
+    width: 58px;
+    height: 72px;
+    margin-bottom: 63px;
+  }
+
+  &__media {
+    width: 68px;
+    height: 24px;
+  }
+
+  &__navlist {
+    display: flex;
+    flex-direction: column;
+    list-style: none;
+  }
+
+  &__link {
+    display: inline-block;
+    font-family: Oswald, sans-serif;
+    font-weight: 300;
+    line-height: 100%;
+    font-size: 14px;
+    color: #0f0e08;
+
+    padding: 10px;
+  }
+
+  &__second-block {
+    display: flex;
+    justify-content: space-between;
+    padding-top: 5px;
+    width: 49.9%;
+  }
+
+  &__text {
+    font-family: "Oswald", sans-serif;
+    font-weight: 300;
+    font-size: 14px;
+    line-height: 150%;
+    color: #0f0e08;
+  }
+
+  &__line {
+    width: 1px;
+    height: 260px;
+    background-color: #1a5a4c;
+    margin: 0 116px 74px 139px;
+  }
+}
+
+.nav {
+  position: relative;
+  transition: 0.5s;
+  max-width: $navMaxWidth;
+  font-family: Oswald, sans-serif;
+  font-style: normal;
+  width: 90%;
+  
+  &__list {
+    display: flex;
+    list-style-type: none;
+    justify-content: space-between;
+    width: 100%;
+  }
+  
+  &__link_active {
+    background: rgba($color: #fff, $alpha: 0.1);
+    border-radius: 8px;
+  }
+  
+  &__link {
+    display: inline-block;
+    padding: 14px 10px;
+    font-size: 14px;
+    line-height: 100%;
+    color: #0f0e08;
+    white-space: nowrap;
+    font-weight: 500;
+    transition: color 0.5s;
+
+    &:hover {
+      color: #9fadc2;
+    }
+  }
+  
+  &__check-menu {
+    display: none;
+  }
+
+  &__check-button {
+    display: none;
+  }
+}
+
+.header {
+  position: absolute;
+  right: 0;
+  top: 0;
+  padding-left: 58px;
+  width: 100%;
+  max-width: $headerMaxWidth;
+  height: 100vh;
+  
+  &__container {
+    position: absolute;
+    top: 45px;
+    width: 18px;
+    height: 12px;
+    z-index: 5;
+    margin: 0;
+  }
+  
+  &__label {
+    position: absolute;
+    width: 18px;
+    height: 12px;
+    z-index: 3;
+    cursor: pointer;
+  }
+
+  &__checkbox {
+    display: none;
+  }
+  
+  &__burger-line {
+    position: absolute;
+    width: 18px;
+    height: 2px;
+    border-radius: 1px;
+    background-color: #0f0e08;
+    transition: 0.5s all;
+    z-index: 2;
+  
+    &_second,
+    &_third {
+      top: 4px;
+    }
+
+    &_fourth {
+      top: 8px;
+    }
+
+   
+
+  }
+  
+
+  .check-menu:checked ~ &__container &__burger-line_first {
+    display: none;
+  }
+
+  .check-menu:checked ~ &__container &__burger-line_second {
+    transform: rotate(45deg);
+  }
+
+  .check-menu:checked ~ &__container &__burger-line_third {
+    transform: rotate(-45deg);
+  }
+
+  .check-menu:checked ~ &__container &__burger-line_fourth {
+    display: none;
+  }
+  .check-menu:checked ~ .menu {
+    display: flex;
+  }
+
+  &__main {
+    position: absolute;
+    width: 71.4%;
+    right: 0;
+    height: 100vh;
+  }
+
+  .check-menu:checked ~ &__main {
+    display: none;
+  }
+
+  &__main-logo {
+    position: absolute;
+    left: 43%;
+    top: 15px;
+    width: 68px;
+    height: 72px;
+    z-index: 2;
+  }
+  
+  &__photo {
+    position: absolute;
+    right: 0;
+    width: 100%;
+    height: 100vh;
+    object-position: left;
+    object-fit: cover;
+  }
+
+  &__photo-smaller {
+    display: none;
+    position: absolute;
+    right: 0;
+    width: 100%;
+    height: 100vh;
+    object-position: left;
+    object-fit: cover;
+  }
+
+  &__title {
+    display: inline-block;
+    position: absolute;
+    top: 235px;
+    left: -305px;
+    font-family: Montserrat, sans-serif;
+    font-weight: 800;
+    font-size: 72px;
+    line-height: 100%;
+    color: #000;
+    text-transform: uppercase;
+    z-index: 2;
+  }
+
+  &__button {
+    position: absolute;
+    top: 467px;
+    left: -305px;
+  }
+  &__buy-tickets {
+    width: 150px;
+    height: 70px;
+    
+    border: 1px solid #1a5a4c;
+    font-family: IBM Plex Sans, sans-serif;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 100%;
+    text-transform: uppercase;
+
+    cursor: pointer;
+    color: #0f0e08;
+  }
+
+  &__buy-arrow {
+    width: 70px;
+    height: 70px;
+    background: #1a5a4c;
+    font-family: IBM Plex Sans, sans-serif;
+    font-weight: 500;
+    font-size: 16px;
+    margin: 0;
+    border: 1px solid #1a5a4c;
+    cursor: pointer;
+    color: #d7dde3;
+  }
+
+  &__events {
+    position: absolute;
+    display: inline-block;
+    bottom: 90px;
+    font-family: IBM Plex Sans, sans-serif;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 14px;
+    line-height: 14px;
+    color: #687480;
+    transform: rotate(-90deg);
+
+    &::before {
+      content: "";
+      position: absolute;
+      height: 1px;
+      width: 70px;
+      left: -90px;
+      top: 7px;
+      background: #1a5a4c;
+    }
+  }
+
+  &__title-mobile,
+  &__button-mobile {
+    display: none;
+  }
+}
+
+.section__small {
+  max-width: 1570px;
+  margin: auto;
+}
+
+.actual {
+  display: block;
+
+  &__first-part {
+    display: flex;
+  }
+
+  &__second-part {
+    display: flex;
+  }
+
+  &__img {
+    height: 520px;
+    object-fit: cover;
+    object-position: center;
+  }
+}
+
+@import "media";
