add new sections

--- a/src/styles/abstracts/_extends.scss
+++ b/src/styles/abstracts/_extends.scss
@@ -1,11 +1,17 @@
 %basicBtn {
   width: $btnWidth;
   height: $btnHeight;
-  font-family: "Raleway", serif;
+  font-family: $font1;
   font-style: normal;
   font-weight: 300;
   font-size: 16px;
   outline: none;
+  cursor: pointer;
+  transition: transform 500ms ease;
+
+  &:hover {
+    transform: scale(0.9);
+  }
 
   @media (max-width: $mobileXLsize) {
     width: $btbWidthXL;
@@ -24,8 +30,24 @@
   color: $clearDay;
 }
 
-%whiteLine {
-  content: "";
-  height: 1px;
-  background: rgba(241, 245, 244, 0.3);
+%backgroundWords {
+  background-repeat: no-repeat;
+  width: 568px;
+  height: 576px;
+  background-size: contain;
+
+  @media (max-width: $notebookSize) {
+    width: 398px;
+    height: 388px;
+  }
+
+  @media (max-width: $tabletSize) {
+    width: 298px;
+    height: 288px;
+  }
+
+  @media (max-width: 550px) {
+    width: auto;
+    height: auto;
+  }
 }
