--- a/src/styles/abstracts/_mixins.scss
+++ b/src/styles/abstracts/_mixins.scss
@@ -4,12 +4,14 @@
   animation: shift 2s 1s ease backwards;
 }
 
-@keyframes shift {
-  from {
-    right: 0;
-  }
-
-  to {
-    right: -99px;
+@media (min-width: $tabletSize) {
+  @keyframes shift {
+    from {
+      right: 0;
+    }
+  
+    to {
+      right: -99px;
+    }
   }
 }
