--- a/src/styles/abstracts/_vars.scss
+++ b/src/styles/abstracts/_vars.scss
@@ -4,11 +4,17 @@ $orange: #cd4d31;
 $clearDay: #f1f5f4;
 $jaguar: #1c1b29;
 $comet: #504f5e;
+$lightGrey: #f1f5f4;
 
 //Container
 $bigContainer: 1170px;
 
+//Fonts
+$font1: "Raleway", serif;
+$font2: "Playfair Display", serif;
+
 //Sizes
+$greenBlockHeight: 800px;
 $btnWidth: 270px;
 $btnHeight: 60px;
 
