--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -1,7 +1,7 @@
 h1,
 h2,
 h3 {
-  font-family: "Playfair Display", sans-serif;
+  font-family: $font2;
   font-style: normal;
   font-weight: bold;
 }
@@ -32,6 +32,11 @@ h2 {
   font-size: 48px;
   line-height: 120%;
   color: $jaguar;
+  word-break: break-word;
+
+  @media (max-width: $mediumSize) {
+    font-size: 36px;
+  }
 }
 
 h3 {
