--- a/src/styles/layout/header.scss
+++ b/src/styles/layout/header.scss
@@ -1,5 +1,5 @@
 .header {
-  height: 800px;
+  height: $greenBlockHeight;
   position: relative;
   margin: auto;
   overflow: hidden;
@@ -16,6 +16,14 @@
   @media (max-width: $mobileXLsize) {
     height: 584px;
     padding: 0 20px;
+  }
+
+  &__container {
+    position: relative;
+
+    @media (min-width: 1000px) {
+      padding: 0 20px;
+    }
   }
 
   &__top {
@@ -36,6 +44,7 @@
 
   &__lang {
     position: relative;
+    cursor: pointer;
 
     @media (max-width: $mobileXLsize) {
       display: none;
@@ -125,7 +134,7 @@
   }
 
   &__bottom-dates {
-    font-family: "Playfair Display", serif;
+    font-family: $font2;
     font-style: normal;
     font-weight: bold;
     font-size: 14px;
@@ -254,7 +263,7 @@
   }
 
   &__nav-link {
-    font-family: "Playfair Display", serif;
+    font-family: $font2;
     font-style: normal;
     font-weight: bold;
     font-size: 48px;
@@ -316,6 +325,7 @@
   position: absolute;
   top: 15px;
   right: 80px;
+  cursor: pointer;
 
   @media (max-width: $mobileXLsize) {
     right: 0;
@@ -332,11 +342,14 @@
 }
 
 .checkbox {
+  width: 40px;
+  height: 40px;
   position: absolute;
-  top: 15px;
-  right: 80px;
+  top: 10px;
+  right: 65px;
   z-index: 2;
   opacity: 0;
+  cursor: pointer;
 
   @media (max-width: $mobileXLsize) {
     right: 0;
