--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -6,7 +6,7 @@
 
 html {
   scroll-behavior: smooth;
-  font-family: "Raleway", serif;
+  font-family: $font1;
   font-style: normal;
   font-weight: normal;
   font-size: 16px;
@@ -17,6 +17,5 @@ html {
 .container {
   max-width: $bigContainer;
   height: 100%;
-  position: relative;
   margin: auto;
 }
