--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -5,3 +5,6 @@
 @import "base/base";
 @import "base/typography";
 @import "layout/header";
+@import "layout/exhibitions";
+@import "layout/events";
+@import "layout/promo";
