--- a/src/styles/layout/exhibitions.scss
+++ b/src/styles/layout/exhibitions.scss
@@ -63,6 +63,10 @@
   &__img {
     position: absolute;
 
+    @media (min-width: 2000px) {
+      width: 700px;
+    }
+
     @media (max-width: $notebookSize) {
       width: 400px;
     }
@@ -124,6 +128,10 @@
     &:last-of-type {
       top: 1340px;
       left: 50px;
+
+      @media (min-width: 2000px) {
+        width: 650px;
+      }
 
       @media (max-width: $notebookSize) {
         top: 1420px;
